[package]
name = "tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
nom = "7.0.0"
nom_locate = "4.0.0" # TODO: actually use it
phf = { version = "0.9", features = ["macros"] }
lazy_static = "1.4.0"
